--- a/src/main/webapp/producto/listadoProductos.xhtml
+++ b/src/main/webapp/producto/listadoProductos.xhtml
@@ -6,7 +6,7 @@
 <h:head>
     <title>Form Producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" type="javascript"></script>
 </h:head>
 <h:body>
     <div class="container">
