--- a/src/main/webapp/shared/sideBarNav.xhtml
+++ b/src/main/webapp/shared/sideBarNav.xhtml
@@ -10,7 +10,7 @@
             <ul class="metismenu" id="menu">
                 <li class="nav-label">Dashboard</li>
                 <li>
-                    <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                    <a class="has-arrow" aria-expanded="false">
                         <i class="icon-speedometer menu-icon"></i><span class="nav-text">Dashboard</span>
                     </a>
                     <ul aria-expanded="false">
