rederict inicial y login

--- a/src/main/webapp/shared/resources.xhtml
+++ b/src/main/webapp/shared/resources.xhtml
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="js/general.js"></script>
     <script src="js/notifications.js" defer></script>-->
-    <link href="assets/css/style.css" rel="stylesheet"/>
+    <link href="../assets/css/style.css" rel="stylesheet"/>
 </ui:composition>
 
 
