--- a/src/main/webapp/shared/resourcesJs.xhtml
+++ b/src/main/webapp/shared/resourcesJs.xhtml
@@ -14,10 +14,10 @@
     <!--**********************************
         Scripts
     ***********************************-->
-    <script src="assets/plugins/common/common.min.js"></script>
-    <script src="assets/js/custom.min.js"></script>
-    <script src="assets/js/settings.js"></script>
-    <script src="assets/js/gleek.js"></script>
-    <script src="assets/js/styleSwitcher.js"></script>
+    <script src="../assets/plugins/common/common.min.js"></script>
+    <script src="../assets/js/custom.min.js"></script>
+    <script src="../assets/js/settings.js"></script>
+    <script src="../assets/js/gleek.js"></script>
+    <script src="../assets/js/styleSwitcher.js"></script>
 </ui:composition>
 
