--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,8 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html class="h-100"  xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -12,10 +14,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png"/>
     <!-- Custom Stylesheet -->
     <ui:include src="shared/resources.xhtml"></ui:include>
+    <script src="../assets/js/login.js"></script>
 </h:head>
 <h:body styleClass="h-100">
 
     <ui:include src="shared/loading.xhtml"></ui:include>
+
+
+
 
 
     <div class="login-form-bg h-100">
@@ -25,18 +31,21 @@
                     <div class="form-input-content">
                         <div class="card login-form mb-0">
                             <div class="card-body pt-5">
-                                <a class="text-center" href="index.html"> <h4>Rosella</h4></a>
 
-                                <form class="mt-5 mb-5 login-input">
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email"/>
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" class="form-control" placeholder="Password"/>
-                                    </div>
-                                    <button class="btn login-form__btn submit w-100">Sign In</button>
-                                </form>
-                                <p class="mt-5 login-form__footer">Dont have account? <a href="page-register.html" class="text-primary">Sign Up</a> now</p>
+                                <div class="text-center">
+                                    <h4>Login</h4>
+                                </div>
+                                <f:view>
+                                    <h:form id="frmNavHeader" styleClass="mt-5 mb-5 login-input">
+                                        <div class="form-group">
+                                            <h:inputText id="txtNombreUsuario" type="emsail" styleClass="form-control" p:placeholder="Nombre de usuario" value="#{loginMB.dto.nombreUsuario}"/>
+                                        </div>
+                                        <div class="form-group">
+                                            <h:inputSecret id="txtUsuarioPassword" class="form-control" p:placeholder="Password" value="#{loginMB.dto.password}"/>
+                                        </div>
+                                        <h:commandLink action="#{loginMB.login()}" styleClass="btn login-form__btn submit w-100">Iniciar Sesión</h:commandLink>
+                                    </h:form>
+                                </f:view>
                             </div>
                         </div>
                     </div>
@@ -48,6 +57,17 @@
 
 
     <ui:include src="shared/resourcesJs.xhtml"></ui:include>
+
+
+    <ui:fragment rendered="#{loginMB.respuesta!=null}">
+        <script>
+
+            $( document ).ready(function() {
+                toastError("Invalidos","Las credenciales son invalidas favor de verificar");
+            });
+
+        </script>
+    </ui:fragment>
 
 </h:body>
 </html>
