--- a/src/main/webapp/shared/navHeader.xhtml
+++ b/src/main/webapp/shared/navHeader.xhtml
@@ -15,7 +15,7 @@
 
             <div class="nav-header">
                 <div class="brand-logo">
-                    <h:commandLink action="/">
+                    <h:commandLink action="#{indexMB.preparedIndex()}">
                         <b class="logo-abbr"><img src="assets/images/logo.png" alt=""/> </b>
                         <span class="logo-compact"><img src="assets/images/logo-compact.png" alt=""/></span>
                         <span class="brand-title">
