--- a/src/main/webapp/shared/resources.xhtml
+++ b/src/main/webapp/shared/resources.xhtml
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="js/general.js"></script>
     <script src="js/notifications.js" defer></script>-->
+    <link href="../assets/plugins/toastr/css/toastr.min.css" rel="stylesheet"/>
     <link href="../assets/css/style.css" rel="stylesheet"/>
 </ui:composition>
 
