--- a/src/main/webapp/shared/resourcesJs.xhtml
+++ b/src/main/webapp/shared/resourcesJs.xhtml
@@ -19,5 +19,9 @@
     <script src="../assets/js/settings.js"></script>
     <script src="../assets/js/gleek.js"></script>
     <script src="../assets/js/styleSwitcher.js"></script>
+
+    <!-- Toastr -->
+    <script src="../assets/plugins/toastr/js/toastr.min.js"></script>
+    <script src="../assets/plugins/toastr/js/toastr.init.js"></script>
 </ui:composition>
 
