--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -71,8 +71,8 @@
     <ui:fragment rendered="#{loginMB.logged}">
         <script>
 
-            window.location.replace("/faces/index.xhtml");
-            //window.location.replace("/jewelryStore/faces/index.xhtml");
+            //window.location.replace("/faces/index.xhtml");
+            window.location.replace("/jewelryStore/faces/index.xhtml");
 
         </script>
     </ui:fragment>
