--- a/src/main/webapp/shared/header.xhtml
+++ b/src/main/webapp/shared/header.xhtml
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="header-left">
-            <div class="input-group icons">
+<!--            <div class="input-group icons">
                 <div class="input-group-prepend">
                     <span class="input-group-text bg-transparent border-0 pr-2 pr-sm-3" id="basic-addon1"><i class="mdi mdi-magnify"></i></span>
                 </div>
@@ -20,11 +20,11 @@
                         <input type="text" class="form-control" placeholder="Search"/>
                     </form>
                 </div>
-            </div>
+            </div>-->
         </div>
         <div class="header-right">
             <ul class="clearfix">
-                <li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
+                <!--<li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
                     <i class="mdi mdi-email-outline"></i>
                     <span class="badge gradient-1 badge-pill badge-primary">3</span>
                 </a>
@@ -79,8 +79,8 @@
 
                         </div>
                     </div>
-                </li>
-                <li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
+                </li>-->
+                <!--<li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
                     <i class="mdi mdi-bell-outline"></i>
                     <span class="badge badge-pill gradient-2 badge-primary">3</span>
                 </a>
@@ -131,8 +131,8 @@
 
                         </div>
                     </div>
-                </li>
-                <li class="icons dropdown d-none d-md-flex">
+                </li>-->
+<!--                <li class="icons dropdown d-none d-md-flex">
                     <a href="javascript:void(0)" class="log-user"  data-toggle="dropdown">
                         <span>English</span>  <i class="fa fa-angle-down f-s-14" aria-hidden="true"></i>
                     </a>
@@ -144,7 +144,7 @@
                             </ul>
                         </div>
                     </div>
-                </li>
+                </li>-->
                 <li class="icons dropdown">
                     <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
                         <span class="activity active"></span>
@@ -154,17 +154,16 @@
                         <div class="dropdown-content-body">
                             <ul>
                                 <li>
-                                    <a href="app-profile.html"><i class="icon-user"></i> <span>Profile</span></a>
+                                    <a href="app-profile.html"><i class="icon-user"></i> <span>Perfil</span></a>
                                 </li>
-                                <li>
+<!--                                <li>
                                     <a href="email-inbox.html"><i class="icon-envelope-open"></i> <span>Inbox</span> <div class="badge gradient-3 badge-pill badge-primary">3</div></a>
-                                </li>
-
+                                </li>-->
                                 <hr class="my-2"/>
                                 <li>
                                     <a href="page-lock.html"><i class="icon-lock"></i> <span>Lock Screen</span></a>
                                 </li>
-                                <li><a href="page-login.html"><i class="icon-key"></i> <span>Logout</span></a></li>
+                                <li><a href="page-login.html"><i class="icon-key"></i> <span>Cerrar Sesión</span></a></li>
                             </ul>
                         </div>
                     </div>
