--- a/src/main/webapp/shared/navHeader.xhtml
+++ b/src/main/webapp/shared/navHeader.xhtml
@@ -17,7 +17,7 @@
                 <div class="brand-logo">
                     <h:commandLink action="#{indexMB.preparedIndex()}">
                         <b class="logo-abbr"><img src="assets/images/logo.png" alt=""/> </b>
-                        <span class="logo-compact"><img src="assets/images/logo-compact.png" alt=""/></span>
+                        <span class="logo-compact"><img style="max-width:100%" src="assets/images/logo-compact.png" alt=""/></span>
                         <span class="brand-title">
                         <img src="assets/images/logo-text.png" alt=""/>
             </span>
