--- a/src/main/webapp/shared/resourcesJs.xhtml
+++ b/src/main/webapp/shared/resourcesJs.xhtml
@@ -23,5 +23,10 @@
     <!-- Toastr -->
     <script src="../assets/plugins/toastr/js/toastr.min.js"></script>
     <script src="../assets/plugins/toastr/js/toastr.init.js"></script>
+    <script src="../assets/js/login.js"></script>
+
+
+    <script src="../assets/plugins/validation/jquery.validate.min.js"></script>
+    <script src="../assets/js/plugins-init/jquery.validate-init.js"></script>
 </ui:composition>
 
