--- a/src/main/webapp/shared/sideBarNav.xhtml
+++ b/src/main/webapp/shared/sideBarNav.xhtml
@@ -82,7 +82,7 @@
                                     <i class="icon-folder-alt menu-icon"></i> <span class="nav-text">Categorias</span>
                                 </a>
                                 <ul aria-expanded="false">
-                                    <li><h:commandLink action="./email-inbox.html">Crear Categoria</h:commandLink></li>
+                                    <li><h:commandLink action="#{categoriaMB.preparedAdd()}">Crear Categoria</h:commandLink></li>
                                     <li><h:commandLink action="./email-read.html">Lista de Categorias</h:commandLink></li>
                                     <li><h:commandLink action="./email-compose.html">Grafica</h:commandLink></li>
                                 </ul>
