--- a/src/main/webapp/shared/header.xhtml
+++ b/src/main/webapp/shared/header.xhtml
@@ -9,6 +9,7 @@
 
     </f:view>
     <h:form id="frmHeader">
+
         <!--**********************************
         Header start
         ***********************************-->
@@ -159,7 +160,7 @@
                         <li class="icons dropdown">
                             <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
                                 <span class="activity active"></span>
-                                <img src="assets/images/user/1.png" height="40" width="40" alt=""/>
+                                <img src="/jewelryStore/faces/assets/images/user/1.png" height="40" width="40" alt=""/>
                             </div>
                             <div class="drop-down dropdown-profile   dropdown-menu">
                                 <div class="dropdown-content-body">
