--- a/src/main/webapp/shared/levelRedirect.xhtml
+++ b/src/main/webapp/shared/levelRedirect.xhtml
@@ -2,10 +2,10 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <ui:fragment rendered="#{sessionScope.usuario!=null && sessionScope.tipo!='admin'}">
+    <ui:fragment rendered="#{sessionScope.usuario!=null and sessionScope.tipo!='admin'}">
         <script>
-            window.location.replace("/faces/login.xhtml");
-            //window.location.replace("/jewelryStore/faces/login.xhtml");
+            //window.location.replace("/faces/login.xhtml");
+            window.location.replace("/jewelryStore/faces/login.xhtml");
 
         </script>
     </ui:fragment>
