--- a/src/main/webapp/shared/resources.xhtml
+++ b/src/main/webapp/shared/resources.xhtml
@@ -12,6 +12,7 @@
     <script src="js/general.js"></script>
     <script src="js/notifications.js" defer></script>-->
     <link href="../assets/plugins/toastr/css/toastr.min.css" rel="stylesheet"/>
+    <link href="../assets/plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet"/>
     <link href="../assets/css/style.css" rel="stylesheet"/>
 </ui:composition>
 
