--- a/src/main/webapp/shared/resourcesJs.xhtml
+++ b/src/main/webapp/shared/resourcesJs.xhtml
@@ -28,5 +28,11 @@
 
     <script src="../assets/plugins/validation/jquery.validate.min.js"></script>
     <script src="../assets/js/plugins-init/jquery.validate-init.js"></script>
+
+    <!-- Tables -->
+    <script src="../assets/plugins/tables/js/jquery.dataTables.min.js"></script>
+    <script src="../assets/plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
+    <script src="../assets/plugins/tables/js/datatable-init/datatable-basic.min.js"></script>
+
 </ui:composition>
 
