--- a/src/main/webapp/Empty.xhtml
+++ b/src/main/webapp/Empty.xhtml
@@ -36,6 +36,12 @@
         ***********************************-->
         <div class="content-body">
 
+            <div class="row page-titles mx-0">
+                <div class="col p-md-0">
+                    <ol class="breadcrumb">
+                    </ol>
+                </div>
+            </div>
             <!-- row -->
 
             <div class="container-fluid">
