categorias crud y grafica

--- a/src/main/webapp/shared/levelRedirect.xhtml
+++ b/src/main/webapp/shared/levelRedirect.xhtml
@@ -4,8 +4,8 @@
 
     <ui:fragment rendered="#{sessionScope.usuario!=null and sessionScope.tipo!='admin'}">
         <script>
-            //window.location.replace("/faces/login.xhtml");
-            window.location.replace("/jewelryStore/faces/login.xhtml");
+            window.location.replace("/faces/login.xhtml");
+            //window.location.replace("/jewelryStore/faces/login.xhtml");
 
         </script>
     </ui:fragment>
