--- a/src/main/webapp/categoria/listadoCategorias.xhtml
+++ b/src/main/webapp/categoria/listadoCategorias.xhtml
@@ -53,7 +53,7 @@
                                 <div class="table-responsive">
                                     <f:view>
                                         <h:form>
-                                            <h:commandLink action="#{categoriaMB.obtenerGrafica()}" immediate="true" styleClass="btn mb-1 btn-info"><f:param name="path" value="#{request.contextPath}"/> Obtener Reporte</h:commandLink>
+                                            <h:commandLink action="#{categoriaMB.mostrarReporte()}" immediate="true" styleClass="btn mb-1 btn-info"><f:param name="path" value="#{request.contextPath}"/> Obtener Reporte</h:commandLink>
                                             <h:dataTable var="dto" value="#{categoriaMB.listCategoria}" class="table table-striped table-bordered zero-configuration">
                                                 <h:column>
                                                     <f:facet name="header">
