--- a/src/main/webapp/shared/sideBarNav.xhtml
+++ b/src/main/webapp/shared/sideBarNav.xhtml
@@ -84,7 +84,7 @@
                                 <ul aria-expanded="false">
                                     <li><h:commandLink action="#{categoriaMB.preparedAdd()}">Crear Categoria</h:commandLink></li>
                                     <li><h:commandLink action="#{categoriaMB.preparedIndex()}">Lista de Categorias</h:commandLink></li>
-                                    <li><h:commandLink action="./email-compose.html">Grafica</h:commandLink></li>
+                                    <li><h:commandLink action="#{categoriaMB.obtenerGrafica()}">Grafica</h:commandLink></li>
                                 </ul>
                             </li>
                             <li>
