categoria grafica y reporte

--- a/src/main/webapp/categoria/graficaCategoria.xhtml
+++ b/src/main/webapp/categoria/graficaCategoria.xhtml
@@ -55,7 +55,7 @@
                             <div class="card-body">
                                 <h2 class="card-title card-title-line">Grafica de Categorías</h2>
                                 <div align="center">
-                                    <img src="grafica.png" alt="No hay grafica"/>
+                                    <img src="../grafica.png" alt="No hay grafica"/>
                                 </div>
 
                             </div>
