--- a/src/main/webapp/producto/listadoProductos.xhtml
+++ b/src/main/webapp/producto/listadoProductos.xhtml
@@ -1,96 +1,158 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
-    <title>Form Producto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" type="javascript"></script>
+    <ui:include src="../shared/redirect.xhtml"></ui:include>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <title></title>
+    <!-- Favicon icon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png"/>
+    <!-- Custom Stylesheet -->
+    <ui:include src="../shared/resources.xhtml"></ui:include>
 </h:head>
 <h:body>
-    <div class="container">
-        <div class="card border-primary mb-3">
-            <div class="card-header">
-                <h2 class="text-primary text-center">
-                    Listado de Productos
-                </h2>
-            </div>
-            <div class="card-body text-primary">
-                <div class="table-responsive">
-                    <f:view>
-                        <h:form id="frmProducto">
-                            <h:commandLink action="#{productoMB.preparedAdd()}" immediate="true" styleClass="btn btn-outline-success">
-                                Agregar
-                            </h:commandLink>
 
-                            <h:dataTable var="dto" value="#{productoMB.listProducto}" class="table table-striped">
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldIdProducto" value="Clave"/>
-                                    </f:facet>
-                                    <h:outputText value="#{dto.descripcionProducto}"/>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldNombreProducto" value="Nombre"/>
-                                    </f:facet>
-                                    <h:outputText value="#{dto.nombreProducto}"/>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldDescripcionProducto" value="Descripcion"/>
-                                    </f:facet>
-                                    <h:outputText value="#{dto.descripcionProducto}"/>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldPrecioProducto" value="Precio"/>
-                                    </f:facet>
-                                    <h:outputText value="#{dto.precioProducto}"/>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldExistenciaProducto" value="Existencia"/>
-                                    </f:facet>
-                                    <h:outputText value="#{dto.existenciaProducto}"/>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldClaveCategoria" value="Existencia"/>
-                                    </f:facet>
-                                    <h:outputText value="#{dto.idCategoria.nombreCategoria}"/>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldAccionActualizar" value="Actualizar"/>
-                                    </f:facet>
-                                    <h:commandLink action="#{productoMB.preparedUpdate()}"
-                                                   actionListener="#{productoMB.seleccionarProducto(Producto)}" immediate="true"
-                                                   class="btn btn-outline-info">
-                                        <f:param name="claveSel" value="#{dto.idProducto}"/>
-                                        Actualizar
-                                    </h:commandLink>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">
-                                        <h:outputLabel id="ldAccionEliminar" value="Eliminar"/>
-                                    </f:facet>
-                                    <h:commandLink action="#{productoMB.delete()}"
-                                                   actionListener="#{productoMB.seleccionarProducto(Producto)}" immediate="true"
-                                                   class="btn btn-outline-danger">
-                                        <f:param name="claveSel" value="#{dto.idProducto}"/>
-                                                 Eliminar
-                                    </h:commandLink>
-                                </h:column>
-                            </h:dataTable>
-                        </h:form>
-                    </f:view>
+    <ui:include src="../shared/loading.xhtml"></ui:include>
+
+    <!--**********************************
+        Main wrapper start
+    ***********************************-->
+    <div id="main-wrapper">
+
+        <ui:include src="../shared/navHeader.xhtml"></ui:include>
+
+        <ui:include src="../shared/header.xhtml"></ui:include>
+
+        <ui:include src="../shared/sideBarNav.xhtml"></ui:include>
+
+        <!--**********************************
+            Content body start
+        ***********************************-->
+        <div class="content-body">
+
+
+            <div class="row page-titles mx-0">
+                <div class="col p-md-0">
+                    <ol class="breadcrumb">
+                    </ol>
                 </div>
             </div>
+            <!-- row -->
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title card-title-line">Lista de Producto</h2>
+                                <div class="table-responsive">
+                                    <f:view>
+                                        <h:form>
+                                            <h:commandLink action="#{productoMB.mostrarReporte()}" immediate="true" styleClass="btn mb-1 btn-info">Obtener Reporte</h:commandLink>
+                                            <h:dataTable var="dto" value="#{productoMB.listProducto}" class="table table-striped table-bordered zero-configuration">
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldIdProducto" value="Clave"/>
+                                                    </f:facet>
+                                                    <h:outputText value="#{dto.idCategoria.idCategoria}"/>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldNombreProducto" value="Nombre"/>
+                                                    </f:facet>
+                                                    <h:outputText value="#{dto.nombreProducto}"/>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldDescripcionProducto" value="Descripcion"/>
+                                                    </f:facet>
+                                                    <h:outputText value="#{dto.descripcionProducto}"/>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldPrecioProducto" value="Precio"/>
+                                                    </f:facet>
+                                                    <h:outputText value="#{dto.precioProducto}"/>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldExistenciaProducto" value="Existencia"/>
+                                                    </f:facet>
+                                                    <h:outputText value="#{dto.stockProducto}"/>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldClaveCategoria" value="Existencia"/>
+                                                    </f:facet>
+                                                    <h:outputText value="#{dto.idCategoria.nombreCategoria}"/>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldAccionActualizar" value="Actualizar"/>
+                                                    </f:facet>
+                                                    <h:commandLink action="#{productoMB.preparedUpdate()}"
+                                                                   actionListener="#{productoMB.seleccionarProducto(Producto)}" immediate="true"
+                                                                   class="btn btn-outline-info">
+                                                        <f:param name="claveSel" value="#{dto.idProducto}"/>
+                                                        Actualizar
+                                                    </h:commandLink>
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputLabel id="ldAccionEliminar" value="Eliminar"/>
+                                                    </f:facet>
+                                                    <h:commandLink action="#{productoMB.delete()}"
+                                                                   actionListener="#{productoMB.seleccionarProducto(Producto)}" immediate="true"
+                                                                   class="btn btn-outline-danger">
+                                                        <f:param name="claveSel" value="#{dto.idProducto}"/>
+                                                        Eliminar
+                                                    </h:commandLink>
+                                                </h:column>
+                                            </h:dataTable>
+                                        </h:form>
+                                    </f:view>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+            <!-- #/ container -->
         </div>
+        <!--**********************************
+            Content body end
+        ***********************************-->
+
+
+        <!--**********************************
+            Footer start
+        ***********************************-->
+        <div class="footer">
+            <div class="copyright">
+
+            </div>
+        </div>
+        <!--**********************************
+            Footer end
+        ***********************************-->
     </div>
+    <!--**********************************
+        Main wrapper end
+    ***********************************-->
+
+    <ui:include src="../shared/resourcesJs.xhtml"></ui:include>
 
 </h:body>
 </html>
+
 
